--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="mobileoptimized" content="240" />
     <meta name="viewport" content="width=device-width,initial-scale=1,target-densitydpi=device-dpi" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:700" />
-    <link rel="stylesheet" href="manipulation.css" />
-	<script src="manipulation.js"></script>
+    <link rel="stylesheet" href="./css/manipulation.css" />
+	<script src="./js/manipulation.js"></script>
 </head>
 
 <body>
